fix: success message in notification settings is cut off (fix #664)

--- a/resources/css/layouts/_banner.css
+++ b/resources/css/layouts/_banner.css
@@ -4,6 +4,7 @@
     border-block-end: var(--border) solid var(--banner-border);
     box-shadow: var(--banner-shadow);
     position: relative;
+    z-index: 1;
 }
 
 [role="banner"] > .center {
